force-app/main/default/objects/Asset/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <label>Contract</label>
    <type>Lookup</type>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Contract Assets</relationshipLabel>
    <relationshipName>Contract_Assets</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>