force-app/main/default/objects/Asset/fields/Device_ESN__c.field-meta.xml
<CustomField>
    <fullName>Device_ESN__c</fullName>
    <label>Device ESN</label>
    <type>Text</type>
    <length>20</length>
    <externalId>true</externalId>
</CustomField>