force-app/main/default/objects/Asset/fields/Last_Ping__c.field-meta.xml
<CustomField>
    <fullName>Last_Ping__c</fullName>
    <label>Last Ping</label>
    <type>DateTime</type>
</CustomField>